re PR c++/40595 ([C++0x] ICE trying to use sfinae with variadic template pack expansion)

PR c++/40595
	* pt.c (tsubst_pack_expansion): Handle unexpanded packs in an
	EXPR_PACK_EXPANSION.

From-SVN: r149117